# godot-typst

./: .gitignore  Cargo.toml  LICENSE.md  README.md
example/typst_project/: TypstEdit.gd  icon.svg.import  main.tscn  placeholder.png.import  project.godot  rust.gdextension  sarasa-mono-cl-regular.ttf.import
example/typst_project/.godot/editor/: create_recent.Node  editor_layout.cfg  filesystem_cache8  filesystem_update4  main.tscn-editstate-3070c538c03ee49b7677ff960a3f5195.cfg  main.tscn-folding-3070c538c03ee49b7677ff960a3f5195.cfg  project_metadata.cfg  script_editor_cache.cfg
example/typst_project/.godot/imported/: output.png-bca5b591603c5baa9613904d36dced7f.ctex  output.png-bca5b591603c5baa9613904d36dced7f.md5  output.svg-4dcd489bcc897406c1571de7f4d745ae.ctex  output.svg-4dcd489bcc897406c1571de7f4d745ae.md5  output.svg-f4f304e78ae368a587eeb6952e9dd95e.ctex  output.svg-f4f304e78ae368a587eeb6952e9dd95e.md5  placeholder.png-ef21141e6f7fef7ccb4b638348400c3b.ctex  placeholder.png-ef21141e6f7fef7ccb4b638348400c3b.md5  sarasa-mono-cl-regular.ttf-2e28ea9df2a95e2483be3e699f45cfb4.md5
example/typst_project/rust/: Cargo.toml
example/typst_project/rust/src/: lib.rs
src/: lib.rs
