[package]
name = "godot-typst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "godot_typst"
crate-type = ["lib"]

[dependencies]
# godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-godot-api"] }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-godot-api", "custom-godot"] }
