[package]
name = "godot-typst"
version = "0.1.0"
edition = "2021"
exclude = ["example/", "bin/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "godot_typst"
crate-type = ["lib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-godot-api"] }
image = "0.24.7"
resvg = "0.36.0"
tempfile = "3.8.1"
tiny-skia = "0.11.2"
usvg = "0.36.0"
